// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RobotForm renders form for creating a new robot 1`] = `
<DocumentFragment>
  <div
    class="form-container robot-form"
  >
    <h2>
      Create Robot
    </h2>
    <form>
      <label>
        Name
        <input
          name="name"
          required=""
          type="text"
          value=""
        />
      </label>
      <label>
        Model Name
        <input
          name="model_name"
          required=""
          type="text"
          value=""
        />
      </label>
      <button
        type="submit"
      >
        Create
      </button>
      <button
        type="button"
      >
        Cancel
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`RobotForm renders form with robot data for editing 1`] = `
<DocumentFragment>
  <div
    class="form-container robot-form"
  >
    <h2>
      Update Robot
    </h2>
    <form>
      <label>
        Name
        <input
          name="name"
          required=""
          type="text"
          value="Robot 1"
        />
      </label>
      <label>
        Model Name
        <input
          name="model_name"
          required=""
          type="text"
          value="Model 1"
        />
      </label>
      <button
        type="submit"
      >
        Update
      </button>
      <button
        type="button"
      >
        Cancel
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`RobotForm submits form data correctly for updating an existing robot 1`] = `
<DocumentFragment>
  <div
    class="form-container robot-form"
  >
    <h2>
      Update Robot
    </h2>
    <form>
      <label>
        Name
        <input
          name="name"
          required=""
          type="text"
          value=""
        />
      </label>
      <label>
        Model Name
        <input
          name="model_name"
          required=""
          type="text"
          value=""
        />
      </label>
      <button
        type="submit"
      >
        Update
      </button>
      <button
        type="button"
      >
        Cancel
      </button>
    </form>
  </div>
</DocumentFragment>
`;
